--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
-body {background-color:black;font-family:arial;color:white}
-h1{color:grey;font-family:verdana}
+body {
+  background-color: black;
+  font-family: arial;
+  color: white;
+  /* Flexbox code */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  color: grey;
+  font-family: verdana;
+}
 .maindiv {
-    background-color: white;
-    color: black;
-    width: 300px;
-    padding: 20px;
-    border-radius: 25px;
-    align: center;
+  background-color: white;
+  color: black;
+  width: 300px;
+  padding: 20px;
+  border-radius: 25px;
+  align: center;
 }
 .highlighted {
-    font-weight: bold;
+  font-weight: bold;
 }
